--- a/assets/index.html
+++ b/assets/index.html
@@ -5,16 +5,174 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Loja Virtual</title>
-  <link rel="stylesheet" href="./assets/css/style.css">
+
+  <!--Favicons-->
+  <link rel="apple-touch-icon" sizes="57x57" href="./images/favicons/">
+  <link rel="apple-touch-icon" sizes="60x60" href="./images/favicons/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="./images/favicons/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="./images/favicons/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="./images/favicons/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="./images/favicons/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="./images/favicons/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="./images/favicons/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./images/favicons/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="./images/favicons/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="./images/favicons/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./images/favicons/favicon-16x16.png">
+  <link rel="manifest" href="./images/favicons/manifest.json">
+  <meta name="msapplication-TileColor" content="#FF9900">
+  <meta name="msapplication-TileImage" content="./images/favicons/ms-icon-144x144.png">
+  <meta name="theme-color" content="#FF9900">
+  <!--end Favicons-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+    crossorigin="anonymous"></script>
+
+  <!-- CSS -->
+  <link href="./css/style.css">
 </head>
 
 <body>
 
-  a
+  <!--header-->
+  <header class="container-fluid bg-light">
+    <!--container-->
+    <section class="container">
+      <!--row-->
+      <article class="row align-items-center">
+        <!--logo-->
+        <a href="/" class="col-md-2">
+          <img src="./images/Logo.svg" alt="Logo da empresa - Flor do Deserto">
+        </a>
+        <!--end logo-->
+
+        <!--buscador-->
+        <form action="#" class="col-md-7">
+          <input type="text" name="name" placeholder="Procurar Roupas aqui">
+
+          <button>
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search"
+              viewBox="0 0 16 16">
+              <path
+                d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
+            </svg>
+          </button>
+        </form>
+        <!--end buscador-->
+
+        <!--administrativo do cliente-->
+        <ul class="col-md-3 nav">
+          <li class="nav-item">
+            <a href="#">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                class="bi bi-person-circle" viewBox="0 0 16 16">
+                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
+                <path fill-rule="evenodd"
+                  d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
+              </svg>
+              Entrar
+            </a>
+          </li>
+
+          <li class="nav-item">
+            <span class="notificacao">3</span>
+            <a href="#">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bag-heart"
+                viewBox="0 0 16 16">
+                <path fill-rule="evenodd"
+                  d="M10.5 3.5a2.5 2.5 0 0 0-5 0V4h5v-.5Zm1 0V4H15v10a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V4h3.5v-.5a3.5 3.5 0 1 1 7 0ZM14 14V5H2v9a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1ZM8 7.993c1.664-1.711 5.825 1.283 0 5.132-5.825-3.85-1.664-6.843 0-5.132Z" />
+              </svg>
+              Carrinho
+            </a>
+          </li>
+        </ul>
+        <!--end administrativo do cliente-->
+
+      </article>
+      <!--end row-->
+    </section>
+    <!--end container-->
+  </header>
+  <!--end header-->
+
+  <!--menu site-->
+  <nav class="container-fluid nav-produtos">
+    <!--container-->
+    <section class="container">
+      <!--menu-->
+      <ul class="nav">
+        <!--lista de itens-->
+        <li class="nav-item">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list"
+            viewBox="0 0 16 16">
+            <path fill-rule="evenodd"
+              d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
+          </svg>
+          Moda Feminina
+          <!--submenu-->
+          <ul class="nav flex-column">
+            <li class="nav-item">Lançamento</li>
+
+            <li class="nav-item">Plus Size</li>
+
+            <li class="nav-item">Moda Street</li>
+
+            <li class="nav-item">Acessórios</li>
+
+            <li class="nav-item">Promoção</li>
+          </ul>
+          <!--submenu-->
+        </li>
+
+        <li class="nav-item">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list"
+            viewBox="0 0 16 16">
+            <path fill-rule="evenodd"
+              d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
+          </svg>
+          Calçados
+        </li>
+        <!--end lista de itens-->
+      </ul>
+      <!--end menu-->
+    </section>
+    <!--end container-->
+  </nav>
+  <!--end menu site-->
+
+  <section id="banners-promocionais" class="container carousel slide">
+    <article class="carousel-inner">
+
+      <figure class="carousel-item active">
+        <img src="./images/banner-1.jpg" class="d-block w-100" alt="Banner Promocional lançamento">
+      </figure>
+
+      <figurev class="carousel-item">
+        <img src="./images/banner-2.jpg" class="d-block w-100" alt="Banner Promocional diversos itens">
+        </figure>
+
+    </article>
+
+    <button class="carousel-control-prev" type="button" data-bs-target="#banners-promocionais" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+
+    <button class="carousel-control-next" type="button" data-bs-target="#banners-promocionais" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+
+  </section>
+
+
   <!--Arquivo Bootsta-->
-  <script src="./assets/js/jquery.js"></script>
-  <script src="./assets/js/popper.js"></script>
-  <script src="./assets/js/bootstrap.js"></script>
+  <script src="./js/jquery.js"></script>
+  <script src="./js/popper.js"></script>
+  <script src="./js/bootstrap.js"></script>
 </body>
 
 </html>
