Adicionada página secundária e Design responsivo ao Bootstrap no SCSS  e CSS

--- a/assets/index.html
+++ b/assets/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Loja Virtual</title>
+  <title>FLOR DO DESERTO</title>
 
   <!--Favicons-->
   <link rel="apple-touch-icon" sizes="57x57" href="./images/favicons/">
@@ -45,8 +45,8 @@
       <!--row-->
       <article class="row d-flex align-content-center">
         <!--logo-->
-        <a href="/" class="col-md-2">
-          <img src="./images/Logo.svg" alt="Logo da empresa - Flor do Deserto">
+        <a href="./index.html" class="col-md-2  d-flex justify-content-center">
+          <img src="./images/Logo.svg" class="img-fluid " alt="Logo da empresa - Flor do Deserto">
         </a>
         <!--end logo-->
 
@@ -104,7 +104,7 @@
       <!--menu-->
       <ul class="nav">
         <!--lista de itens-->
-        <li class="col-md-2 nav-item d-flex align-items-center">
+        <li class="col-xl-2 col-md-12 nav-item d-flex align-items-center">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list"
             viewBox="0 0 16 16">
             <path fill-rule="evenodd"
@@ -125,7 +125,7 @@
           </ul>
         </li>
         <!--submenu-->
-        <li class="col-md-2 nav-item d-flex align-items-center">
+        <li class="col-xl-2 col-md-12 nav-item d-flex align-items-center">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list"
             viewBox="0 0 16 16">
             <path fill-rule="evenodd"
@@ -209,12 +209,12 @@
     <!--end banner promocional 6 colunas-->
 
     <!--container produtos-->
-    <section class="container">
+    <section class="container produtos">
       <h1 class="text-center">Mais Populares</h1>
 
       <article class="row">
         <!--cropped rosa-->
-        <section class="produtos col-md-3">
+        <a href="#" class="produtos-container col-md-3">
           <img src="./images/croped-rosa.png" class="img-fluid" alt="Cropped rosa">
           <!--descrição-->
           <article class="produtos-itens">
@@ -249,11 +249,11 @@
             <strong class="produtos-preco">R$59,90</strong>
           </article>
           <!--end descrição-->
-        </section>
+        </a>
         <!--end cropped rosa-->
 
         <!--camisa manga comprida-->
-        <section class="produtos col-md-3">
+        <a href="#" class="produtos-container col-md-3">
           <img src="./images/camiseta-manga-comprida.png" class="img-fluid" alt="camisa manga comprida">
           <!--descrição-->
           <article class="produtos-itens">
@@ -288,11 +288,11 @@
             <strong class="produtos-preco">R$79,90</strong>
           </article>
           <!--end descrição-->
-        </section>
+        </a>
         <!--camisa manga comprida-->
 
         <!--camisa listrada-->
-        <section class="produtos col-md-3">
+        <a href="#" class="produtos-container col-md-3">
           <img src="./images/Camiseta Listrada.png" class="img-fluid" alt="Camisa listrada">
           <!--descrição-->
           <article class="produtos-itens">
@@ -327,11 +327,11 @@
             <strong class="produtos-preco">R$59,90</strong>
           </article>
           <!--end descrição-->
-        </section>
+        </a>
         <!--camisa listrada-->
 
         <!--saia jeans-->
-        <section class="produtos col-md-3">
+        <a href="#" class="produtos-container col-md-3">
           <img src="./images/saia-jeans.png" class="img-fluid" alt="saia jeans">
           <!--descrição-->
           <article class="produtos-itens">
@@ -366,12 +366,12 @@
             <strong class="produtos-preco">R$97,90</strong>
           </article>
           <!--end descrição-->
-        </section>
+        </a>
         <!--saia jeans-->
       </article>
 
       <div class="row d-flex justify-content-center">
-        <button type="button" class="btn btn-warning col-md-2">VEJA MAIS</button>
+        <a href="./camisetas.html" class="btn btn-warning col-md-2">VEJA MAIS</a>
       </div>
 
     </section>
@@ -404,7 +404,7 @@
         <!--End Atendimento-->
 
         <!--Acesso rápido-->
-        <article class="col-md-4">
+        <article class="col-md-3">
           <h4>Acesso rápido</h4>
 
           <ul class="nav flex-column">
@@ -429,7 +429,7 @@
         <!--End Acesso rápido-->
 
         <!--Institucional-->
-        <article class="col-md-4">
+        <article class="col-md-3">
           <h4>Institucional</h4>
 
           <ul class="nav flex-column">
@@ -446,7 +446,7 @@
         <!--End Institucional-->
 
         <!--Mais acessadas-->
-        <article class="col-md-4">
+        <article class="col-md-2">
           <h4>Mais acessadas</h4>
 
           <ul class="nav flex-column">
@@ -454,8 +454,8 @@
               <a href="#">Cropped rosa </a>
             </li>
 
-            <li class="nav-item">
-              <a href="#">Camiseta manga co... </a>
+            <li class="nav-item ellipsis">
+              <a href="#">Camiseta manga comprida </a>
             </li>
 
             <li class="nav-item">
