--- a/assets/camisetas.html
+++ b/assets/camisetas.html
@@ -78,8 +78,8 @@
           </li>
 
           <li class="nav-item">
-            <span class="notificacao d-flex align-items-center justify-content-center">3</span>
-            <a href="#">
+            <span class="notificacao d-flex align-items-center justify-content-center">2</span>
+            <a href="./Cart.html">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart-fill"
                 viewBox="0 0 16 16">
                 <path
@@ -148,7 +148,7 @@
 
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="#">Home</a></li>
+          <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
           <li class="breadcrumb-item active" aria-current="page">Camisetas</li>
         </ol>
       </nav>
@@ -162,7 +162,7 @@
       <article class="row">
 
         <!--cropped rosa-->
-        <a href="#" class="produtos-container col-md-3">
+        <a href="./croped-rosa.html" class="produtos-container col-md-3">
           <img src="./images/croped-rosa.png" class="img-fluid" alt="Cropped rosa">
           <!--descrição-->
           <article class="produtos-itens">
@@ -201,7 +201,7 @@
         <!--end cropped rosa-->
 
         <!--camisa manga comprida-->
-        <a href="#" class="produtos-container col-md-3">
+        <a href="./camisetas-manga-comprida.html" class="produtos-container col-md-3">
           <img src="./images/camiseta-manga-comprida.png" class="img-fluid" alt="camisa manga comprida">
           <!--descrição-->
           <article class="produtos-itens">
@@ -240,7 +240,7 @@
         <!--camisa manga comprida-->
 
         <!--camisa listrada-->
-        <a href="#" class="produtos-container col-md-3">
+        <a href="./camisa-listrada.html" class="produtos-container col-md-3">
           <img src="./images/Camiseta Listrada.png" class="img-fluid" alt="Camisa listrada">
           <!--descrição-->
           <article class="produtos-itens">
@@ -279,7 +279,7 @@
         <!--camisa listrada-->
 
         <!--saia jeans-->
-        <a href="#" class="produtos-container col-md-3">
+        <a href="./Saia jeans.html" class="produtos-container col-md-3">
           <img src="./images/saia-jeans.png" class="img-fluid" alt="saia jeans">
           <!--descrição-->
           <article class="produtos-itens">
@@ -318,7 +318,7 @@
         <!--saia jeans-->
 
         <!--cropped rosa-->
-        <a href="#" class="produtos-container col-md-3">
+        <a href="./croped-rosa.html" class="produtos-container col-md-3">
           <img src="./images/croped-rosa.png" class="img-fluid" alt="Cropped rosa">
           <!--descrição-->
           <article class="produtos-itens">
@@ -357,7 +357,7 @@
         <!--end cropped rosa-->
 
         <!--camisa manga comprida-->
-        <a href="#" class="produtos-container col-md-3">
+        <a href="./camisetas-manga-comprida.html" class="produtos-container col-md-3">
           <img src="./images/camiseta-manga-comprida.png" class="img-fluid" alt="camisa manga comprida">
           <!--descrição-->
           <article class="produtos-itens">
@@ -396,7 +396,7 @@
         <!--camisa manga comprida-->
 
         <!--camisa listrada-->
-        <a href="#" class="produtos-container col-md-3">
+        <a href="./camisa-listrada.html" class="produtos-container col-md-3">
           <img src="./images/Camiseta Listrada.png" class="img-fluid" alt="Camisa listrada">
           <!--descrição-->
           <article class="produtos-itens">
@@ -435,7 +435,7 @@
         <!--camisa listrada-->
 
         <!--saia jeans-->
-        <a href="#" class="produtos-container col-md-3">
+        <a href="./Saia jeans.html" class="produtos-container col-md-3">
           <img src="./images/saia-jeans.png" class="img-fluid" alt="saia jeans">
           <!--descrição-->
           <article class="produtos-itens">
@@ -474,7 +474,7 @@
         <!--saia jeans-->
 
         <!--cropped rosa-->
-        <a href="#" class="produtos-container col-md-3">
+        <a href="./croped-rosa.html" class="produtos-container col-md-3">
           <img src="./images/croped-rosa.png" class="img-fluid" alt="Cropped rosa">
           <!--descrição-->
           <article class="produtos-itens">
@@ -513,7 +513,7 @@
         <!--end cropped rosa-->
 
         <!--camisa manga comprida-->
-        <a href="#" class="produtos-container col-md-3">
+        <a href="./camisetas-manga-comprida.html" class="produtos-container col-md-3">
           <img src="./images/camiseta-manga-comprida.png" class="img-fluid" alt="camisa manga comprida">
           <!--descrição-->
           <article class="produtos-itens">
@@ -552,7 +552,7 @@
         <!--camisa manga comprida-->
 
         <!--camisa listrada-->
-        <a href="#" class="produtos-container col-md-3">
+        <a href="./camisetas-manga-comprida.html" class="produtos-container col-md-3">
           <img src="./images/Camiseta Listrada.png" class="img-fluid" alt="Camisa listrada">
           <!--descrição-->
           <article class="produtos-itens">
@@ -591,7 +591,7 @@
         <!--camisa listrada-->
 
         <!--saia jeans-->
-        <a href="#" class="produtos-container col-md-3">
+        <a href="./Saia jeans.html" class="produtos-container col-md-3">
           <img src="./images/saia-jeans.png" class="img-fluid" alt="saia jeans">
           <!--descrição-->
           <article class="produtos-itens">
@@ -708,19 +708,19 @@
 
           <ul class="nav flex-column">
             <li class="nav-item">
-              <a href="#">Cropped rosa </a>
+              <a href="./croped-rosa.html">Cropped rosa </a>
             </li>
 
             <li class="nav-item ellipsis">
-              <a href="#">Camiseta manga comprida </a>
+              <a href="./camisetas-manga-comprida.html">Camiseta manga comprida </a>
             </li>
 
             <li class="nav-item">
-              <a href="#">Camiseta listrada </a>
+              <a href="./camisa-listrada.html">Camiseta listrada </a>
             </li>
 
             <li class="nav-item">
-              <a href="#">Saia jeans</a>
+              <a href="./Saia jeans.html">Saia jeans</a>
             </li>
           </ul>
 
