--- a/assets/index.html
+++ b/assets/index.html
@@ -77,8 +77,8 @@
           </li>
 
           <li class="nav-item">
-            <span class="notificacao d-flex align-items-center justify-content-center">3</span>
-            <a href="#">
+            <span class="notificacao d-flex align-items-center justify-content-center">2</span>
+            <a href="./Cart.html">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart-fill"
                 viewBox="0 0 16 16">
                 <path
@@ -214,7 +214,7 @@
 
       <article class="row">
         <!--cropped rosa-->
-        <a href="#" class="produtos-container col-md-3">
+        <a href="./croped-rosa.html" class="produtos-container col-md-3">
           <img src="./images/croped-rosa.png" class="img-fluid" alt="Cropped rosa">
           <!--descrição-->
           <article class="produtos-itens">
@@ -253,7 +253,7 @@
         <!--end cropped rosa-->
 
         <!--camisa manga comprida-->
-        <a href="#" class="produtos-container col-md-3">
+        <a href="./camisetas-manga-comprida.html" class="produtos-container col-md-3">
           <img src="./images/camiseta-manga-comprida.png" class="img-fluid" alt="camisa manga comprida">
           <!--descrição-->
           <article class="produtos-itens">
@@ -292,7 +292,7 @@
         <!--camisa manga comprida-->
 
         <!--camisa listrada-->
-        <a href="#" class="produtos-container col-md-3">
+        <a href="./camisa-listrada.html" class="produtos-container col-md-3">
           <img src="./images/Camiseta Listrada.png" class="img-fluid" alt="Camisa listrada">
           <!--descrição-->
           <article class="produtos-itens">
@@ -331,7 +331,7 @@
         <!--camisa listrada-->
 
         <!--saia jeans-->
-        <a href="#" class="produtos-container col-md-3">
+        <a href="./Saia jeans.html" class="produtos-container col-md-3">
           <img src="./images/saia-jeans.png" class="img-fluid" alt="saia jeans">
           <!--descrição-->
           <article class="produtos-itens">
@@ -451,19 +451,19 @@
 
           <ul class="nav flex-column">
             <li class="nav-item">
-              <a href="#">Cropped rosa </a>
+              <a href="./croped-rosa.html">Cropped rosa </a>
             </li>
 
             <li class="nav-item ellipsis">
-              <a href="#">Camiseta manga comprida </a>
+              <a href="./camisetas-manga-comprida.html">Camiseta manga comprida </a>
             </li>
 
             <li class="nav-item">
-              <a href="#">Camiseta listrada </a>
+              <a href="./camisa-listrada.html">Camiseta listrada </a>
             </li>
 
             <li class="nav-item">
-              <a href="#">Saia jeans</a>
+              <a href="./Saia jeans.html">Saia jeans</a>
             </li>
           </ul>
 
